--- a/ball_tracking/ball_tracking_ui.ui
+++ b/ball_tracking/ball_tracking_ui.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>660</width>
-    <height>623</height>
+    <height>283</height>
    </rect>
   </property>
   <property name="cursor">
@@ -20,42 +20,11 @@
    <enum>Qt::LeftToRight</enum>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QGraphicsView" name="pic_View">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>180</y>
-      <width>591</width>
-      <height>331</height>
-     </rect>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>591</width>
-      <height>331</height>
-     </size>
-    </property>
-    <property name="maximumSize">
-     <size>
-      <width>1000</width>
-      <height>1000</height>
-     </size>
-    </property>
-    <property name="mouseTracking">
-     <bool>true</bool>
-    </property>
-    <property name="focusPolicy">
-     <enum>Qt::NoFocus</enum>
-    </property>
-    <property name="autoFillBackground">
-     <bool>false</bool>
-    </property>
-   </widget>
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>20</y>
+      <y>100</y>
       <width>501</width>
       <height>122</height>
      </rect>
@@ -164,7 +133,7 @@
     <property name="geometry">
      <rect>
       <x>530</x>
-      <y>20</y>
+      <y>100</y>
       <width>91</width>
       <height>121</height>
      </rect>
@@ -194,10 +163,29 @@
      </item>
     </layout>
    </widget>
-   <zorder>pic_View</zorder>
+   <widget class="QWidget" name="horizontalLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>10</y>
+      <width>91</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="show_button">
+       <property name="text">
+        <string>Show</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
    <zorder>verticalLayoutWidget</zorder>
    <zorder>verticalLayoutWidget_2</zorder>
    <zorder></zorder>
+   <zorder>horizontalLayoutWidget</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
